--- a/templates/article/history.html
+++ b/templates/article/history.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load emarkdown %}
-{% load humane_date %}
+{% load humanize %}
 {% load profile %}
 
 {% block title %}
