--- a/templates/article/validation.html
+++ b/templates/article/validation.html
@@ -1,5 +1,5 @@
 {% extends "article/base.html" %}
-{% load humane_date %}
+{% load humanize %}
 
 {% block title %}
 Liste des articles soumis en validation
@@ -64,7 +64,7 @@ Liste des articles soumis en validation
                         {% endfor %}
                     </td>
                     <td>
-                        <span>{{ validation.date_proposition|humane_date }}</span>
+                        <span>{{ validation.date_proposition|naturaltime }}</span>
                     </td>
                     <td>
                         {% if validation.validator %}
@@ -73,7 +73,7 @@ Liste des articles soumis en validation
                     </td>
                     <td>
                         {% if validation.date_reserve %}
-                        <span>{{ validation.date_reserve|humane_date }}</span>
+                        <span>{{ validation.date_reserve|naturaltime }}</span>
                         {% endif %}
                     </td>
                     <td>
