--- a/templates/forum/details_row.part.html
+++ b/templates/forum/details_row.part.html
@@ -1,5 +1,4 @@
-{% load humane_date %}
-{% load upfirstletter %}
+{% load humanize %}
 
 <div class="forum-entry
     {% if topic.is_locked %}
@@ -39,7 +38,7 @@
                 {% if answer %}
                     Dernière rép.
                     <a href="{{ answer.get_absolute_url }}">
-                        {% with date=answer.pubdate|humane_date %}
+                        {% with date=answer.pubdate|naturaltime %}
                             {{ date }}
                         {% endwith %}
                     </a>
