--- a/templates/forum/forums_common.part.html
+++ b/templates/forum/forums_common.part.html
@@ -1,6 +1,5 @@
 {# Block displaying the list of forums belonging to a category #}
-{% load humane_date %}
-{% load upfirstletter %}
+{% load humanize %}
 {% load forum %}
 
 <div class="row">
@@ -33,8 +32,8 @@
             {% with last_message=forum.get_last_message %}
                 {% if last_message %}
                     <a href="{{ last_message.get_absolute_url }}">
-                        {% with date=last_message.pubdate|humane_date %}
-                            {{ date|upfirstletter }}
+                        {% with date=last_message.pubdate|naturaltime %}
+                            {{ date|capfirst }}
                         {% endwith %}
                     </a>
                     par
