--- a/templates/forum/topic_item_common.part.html
+++ b/templates/forum/topic_item_common.part.html
@@ -1,10 +1,10 @@
-{% load humane_date %}
+{% load humanize %}
 {% load interventions %}
 
 <article>
     <h3><a href="{{ topic.first_post.get_absolute_url }}">{{ topic.title }}</a></h3>
     <p class="article-metadata">
-        {{ topic.first_post.pubdate|humane_date }} -
+        {{ topic.first_post.pubdate|naturaltime }} -
         <a href="{{ topic.get_last_answer.get_absolute_url }}">23 réactions</a>
     </p>
     <a href="{{ topic.first_post.get_absolute_url }}" 
