--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 {% load profile %}
 {% load interventions %}
 {% load topbar %}
-{% load humane_date %}
+{% load humanize %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js enable-mobile-menu lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -192,7 +192,7 @@
                                                         <img src="{{ p.get_avatar_url }}" alt="" class="avatar" />
                                                         {% endwith %}
                                                         <span class="username">{{ first_unread.author.username }}</span>
-                                                        <span class="date">{{ first_unread.pubdate|humane_date }}</span>
+                                                        <span class="date">{{ first_unread.pubdate|naturaltime }}</span>
                                                         <span class="topic">{{ topic.title }}</span>
                                                     </a>
                                                 </li>
@@ -213,7 +213,7 @@
                                                         {% with p=last_read.author|profile %}
                                                         <img src="{{ p.get_avatar_url  }}" alt="" class="avatar" />
                                                         <span class="username">{{ last_read.author.username }}</span>
-                                                        <span class="date">{{ last_read.pubdate|humane_date }}</span>
+                                                        <span class="date">{{ last_read.pubdate|naturaltime }}</span>
                                                         <span class="topic">{{ topic.title }}</span>
                                                         {% endwith %}
                                                     </a>
@@ -260,7 +260,7 @@
                                                         {% with p=first_unread.author|profile %}
                                                         <img src="{{ p.get_avatar_url  }}" alt="" class="avatar" />
                                                         <span class="username">{{ first_unread.author.username }}</span>
-                                                        <span class="date">{{ first_unread.pubdate|humane_date }}</span>
+                                                        <span class="date">{{ first_unread.pubdate|naturaltime }}</span>
                                                         <span class="topic">{{ topic.title }}</span>
                                                         {% endwith %}
                                                     </a>
@@ -282,7 +282,7 @@
                                                         {% with p=last_read.author|profile %}
                                                         <img src="{{ p.get_avatar_url  }}" alt="" class="avatar" />
                                                         <span class="username">{{ last_read.author.username }}</span>
-                                                        <span class="date">{{ last_read.pubdate|humane_date }}</span>
+                                                        <span class="date">{{ last_read.pubdate|naturaltime }}</span>
                                                         <span class="topic">{{ topic.title }}</span>
                                                         {% endwith %}
                                                     </a>
