--- a/templates/forum/find_topic.html
+++ b/templates/forum/find_topic.html
@@ -1,5 +1,5 @@
 {% extends "forum/base.html" %}
-{% load humane_date %}
+{% load humanize %}
 {% load profile %}
 {% load emarkdown %}
 
@@ -40,7 +40,7 @@
                     </div>
                 </td>
                 <td>
-                    {% with date=topic.pubdate|humane_date %}
+                    {% with date=topic.pubdate|naturaltime %}
                         {{ date }}
                     {% endwith %}
                 </td>
