--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -1,6 +1,6 @@
 {% extends "forum/base.html" %}
 {% load emarkdown %}
-{% load humane_date %}
+{% load humanize %}
 {% load profile %}
 {% load crispy_forms_tags %}
 
@@ -87,11 +87,11 @@
 
         <div class="message-metadata">
             <a href="{{ post.author.get_absolute_url }}" class="username">{{ post.author.username }}</a>
-            <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|humane_date }}</a>
+            <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|naturaltime }}</a>
             {% if not post.is_visible %}
                 <i>Masqué par {{ post.editor }} : {{ post.text_hidden }}</i>
             {% elif not post.update = None %}
-                <i>(Edité {{ post.update|humane_date }} par {{ post.editor }} )</i>
+                <i>(Edité {{ post.update|naturaltime }} par {{ post.editor }} )</i>
             {% endif %}
         </div>
 
