--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -38,7 +38,7 @@
     .header-container {
         z-index: 1;
         position: relative;
-        @include box-shadow(0 1px 5px rgba(0, 0, 0, .25));
+        @include box-shadow(0 0 3px rgba(0, 0, 0, .3));
     }
 
 
@@ -193,8 +193,8 @@
         }
         .search-more {
             width: 30px;
-            height: 24px;
-            padding: 3px 0;
+            height: 30px;
+            line-height: 30px;
         }
     }
 
@@ -244,13 +244,6 @@
             background-color: #E3E5E5;
             border-bottom: none;
 
-            &,
-            h3 {
-                @include background-image(
-                    linear-gradient(right, rgba(0, 0, 0, .05), transparent 15px)
-                );
-            }
-
             h3,
             h4,
             ul li {
@@ -261,7 +254,7 @@
                 margin-top: 31px;
             }
 
-            h4[data-chap-num] {
+            h4[data-num] {
                 padding-left: calc(11% + 25px);
 
                 &:before {
@@ -270,20 +263,11 @@
             }
 
             &.sommaire ul li.current {
-                margin-top: 0 !important;
-                padding-top: 5px;
-                margin-bottom: 5px;
-                background-color: #d8dada;
-
                 ul {
-                    margin-top: 5px;
-                    padding-top: 5px;
-                    padding-bottom: 5px;
                     margin-left: calc(-11% - 10px);
                     width: calc(111% + 10px);
                     @include background(
-                        linear-gradient(top, rgba(0, 0, 0, .07), transparent 15px),
-                        linear-gradient(bottom, rgba(0, 0, 0, .07), transparent 15px)
+                        linear-gradient(top, rgba(0, 0, 0, .07), transparent 3px)
                     );
 
                     a {
